<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.postDetailsActivity"
    android:background="#ffff"

    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/post_details_image"
            android:layout_width="0dp"
            android:layout_height="250dp"
            android:layout_marginBottom="8dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_launcher_background"
            android:background="#2d2d2d"
            tools:ignore="VectorDrawableCompat" />

        <TextView
            android:id="@+id/post_details_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingExtra="4dp"
            android:text="TextView"
            android:textColor="@android:color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_details_image" />

        <View
            android:id="@+id/view2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="#2e2e2e"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_details_title" />

        <TextView
            android:id="@+id/post_details_date_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/dtaetime_authorname"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <TextView
            android:id="@+id/post_details_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:lineSpacingExtra="8dp"
            android:text="@string/post_details_descText"
            android:textColor="#373737"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_details_date_author" />

        <ImageView
            android:id="@+id/post_details_commentUserPhoto"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/post_details_desc"
            tools:srcCompat="@tools:sample/avatars" />

        <EditText
            android:id="@+id/post_details_commentText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/reg_edittext_style"
            android:ems="10"
            android:hint="@string/txt_add_new_comment"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toBottomOf="@+id/post_details_commentUserPhoto"
            app:layout_constraintEnd_toStartOf="@+id/post_details_btn_add_comment"
            app:layout_constraintStart_toEndOf="@+id/post_details_commentUserPhoto"
            app:layout_constraintTop_toTopOf="@+id/post_details_commentUserPhoto" />

        <Button
            android:id="@+id/post_details_btn_add_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/reg_btn_style"
            android:padding="15dp"
            android:text="@string/txt_add_new_comment"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="10sp"
            app:layout_constraintBottom_toBottomOf="@+id/post_details_commentText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/post_details_commentText" />

        <ImageView
            android:id="@+id/post_details_authorImage"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/post_details_date_author"
            app:layout_constraintStart_toEndOf="@+id/post_details_date_author"
            app:layout_constraintTop_toTopOf="@+id/post_details_date_author"
            tools:srcCompat="@tools:sample/avatars" />
    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>